<resources>
    <string name="app_name">Project1</string>
    <string name="title_activity_recent_report">RecentReportActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="andG">andG</string>
    <string name="forgot">Forgot?</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="Login">Login</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="change_password1">Change Password</string>
    <string name="q">q</string>
    <string name="time"> 0 s</string>
    <string name="here"> here</string>
    <string name="Sharesomething">Share something</string>
    <string name="SharingOff">Sharing off</string>
    <string name="recent_report">Recent Report</string>
    <string name="search_friends">Search Friends</string>
    <string name="check_timeline">Check the timeline</string>
    <string name="auction">Auction</string>
    <string name="shake_to_chat">Shake to Chat</string>
    <string name="profile">Profile</string>
    <string name="my_friend">My Friends</string>
    <string name="chats">Chats</string>
    <string name="notification">Notifications</string>
    <string name="points">Points</string>
    <string name="setting">Setting</string>
    <string name="free_page">free page</string>
    <string name="js_interface">JavaScript Interface</string>
    <string name="image">画像</string>
    <string name="send">Send</string>
    <string name="three">3 </string>
    <string name="total_points">Your Total Points</string>
    <string name="number_points">13672</string>
    <string name="buy_points">Buy Points</string>
    <string name="auction_content">Get noticed by millions! Enter your bid to displayed on top of the Auction wall</string>
    <string name="check_me_out">Who Checked Me Out?</string>
    <string name="check_me_out_content">Curious to see who's viewed your profile? Unlock to find out!</string>
    <string name="wink_bomb">Wink Boom</string>
    <string name="wink_bomb_content">Send a message to hundreds of people at once with a Wink Bomb!</string>
    <string name="favorite_me">Who Favorited Me?</string>
    <string name="favorite_me_content">Find out who likes chatting to you and added you as a Favorite</string>
    <string name="send_gift">Send Gift</string>
    <string name="send_gift_content">Send virtual gifts as ice breakers, for the holidays, and for</string>
    <string name="logout">Logout</string>
    <string name="setting_chat_noti">Chat and Notification Settings</string>
    <string name="sound_on">Sound On</string>
    <string name="vibration_on">Vibration On</string>
    <string name="Account">Account</string>
    <string name="distance_in">Distance in</string>
    <string name="miles">Miles</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="rate_andG">Rate andG</string>
    <string name="term_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_use">Terms of Use</string>
    <string name="version">Version 1.0.0.0b r5482_20140425_16:19</string>
</resources>
