<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.anhlk.project1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8ab442"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btn_nav_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:background="@drawable/background_btn_navmenu" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_recent_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/points"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_margin="7dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_btn_navmessage">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_menu_item_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="1dp"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="9sp" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d1d1d1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_changepwd_edittext">

            <ImageView
                android:id="@+id/ic_my_points"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_my_points" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ic_my_points"
                android:layout_toRightOf="@+id/ic_my_points"
                android:text="@string/total_points"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView3"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/number_points"
                android:textColor="#718f32"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_buy_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_btn_buy_points"
            android:text="@string/buy_points"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@drawable/ic_bg_point" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_lookatme"
                android:layout_margin="5dp"
                android:id="@+id/imageView4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auction"
                android:textStyle="bold"
                android:layout_alignTop="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auction_content"
                android:textSize="10sp"
                android:id="@+id/textView4"
                android:layout_alignBottom="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorderBtn"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_pannel_whocheckme_lock"
                android:layout_margin="5dp"
                android:id="@+id/imageView5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_me_out"
                android:textStyle="bold"
                android:layout_alignTop="@+id/imageView5"
                android:layout_toRightOf="@+id/imageView5"
                android:layout_toEndOf="@+id/imageView5"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_me_out_content"
                android:textSize="10sp"
                android:layout_alignBottom="@+id/imageView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorderBtn"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_pannel_winkbomb"
                android:id="@+id/imageView6" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wink_bomb"
                android:textStyle="bold"
                android:layout_alignTop="@+id/imageView6"
                android:layout_toRightOf="@+id/imageView6"
                android:layout_toEndOf="@+id/imageView6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/wink_bomb_content"
                android:layout_alignBottom="@+id/imageView6"
                android:layout_toRightOf="@+id/imageView6"
                android:layout_toEndOf="@+id/imageView6" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorderBtn"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_whofavme"
                android:layout_margin="5dp"
                android:id="@+id/imageView7" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite_me"
                android:textStyle="bold"
                android:layout_alignTop="@+id/imageView7"
                android:layout_toRightOf="@+id/imageView7"
                android:layout_toEndOf="@+id/imageView7"
                android:id="@+id/textView6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_me_content"
                android:textSize="10sp"
                android:layout_alignBottom="@+id/imageView7"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorderBtn"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_gift_point"
                android:layout_margin="5dp"
                android:id="@+id/imageView8" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_gift"
                android:textStyle="bold"
                android:layout_alignTop="@+id/imageView8"
                android:layout_toRightOf="@+id/imageView8"
                android:layout_toEndOf="@+id/imageView8"
                android:id="@+id/textView7" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_gift_content"
                android:textSize="10sp"
                android:layout_below="@+id/textView7"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorderBtn"/>
    </LinearLayout>
</LinearLayout>
