<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#efefef"
    android:orientation="vertical"
    tools:context="com.example.anhlk.project1.MainActivity">

    <include layout="@layout/actionbar_layout" />

    <RelativeLayout
        android:id="@+id/rlayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_login_edittext1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView2"
            android:background="@android:color/transparent"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background_login_edittext2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingLeft="7dp"
            android:paddingRight="5dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_btn_color"
        android:gravity="center"
        android:text="@string/Login"
        android:textStyle="bold" />
</LinearLayout>
